# TgMusicBot

./: .deepsource.toml  .dockerignore  .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.json  pyproject.toml  railway.json  requirements.txt  sample.env  setup.sh
.github/workflows/: code-fixer.yml  dependency-update.yml  update-deps.yml
TgMusic/: __init__.py  __main__.py  logger.py
TgMusic/cookies/: README.md
TgMusic/core/: __init__.py  _admins.py  _api.py  _cacher.py  _config.py  _database.py  _dataclass.py  _downloader.py  _filters.py  _httpx.py  _jiosaavn.py  _save_cookies.py  _spotify_dl_helper.py  _telegram.py  _tgcalls.py  _youtube.py  admins.py  buttons.py  thumbnails.py  utils.py
TgMusic/modules/: __init__.py  auth.py  bot.py  broadcast.py  callback.py  chat_owner.py  clear.py  devs.py  funcs.py  jobs.py  loop.py  play.py  progress_handler.py  queue.py  remove.py  seek.py  shell_command.py  skip.py  speed.py  start.py  stop.py  update.py  volume.py  watcher.py
TgMusic/modules/utils/: __init__.py  play_helpers.py
cookies/: README.md
src/: __init__.py  __main__.py  config.py  database.py  logger.py  pytgcalls.py
src/helpers/: __init__.py  _aiohttp.py  _api.py  _cacher.py  _database.py  _dataclass.py  _dl_helper.py  _downloader.py  _httpx.py  _jiosaavn.py  _lang.py  _pytgcalls.py  _save_cookies.py  _telegram.py  _youtube.py
src/locales/: ar.json  bn.json  en.json  es.json  fa.json  fr.json  hi.json  id.json  kur.json  ru.json
src/modules/: broadcast.py  callback.py  chat_owner.py  devs.py  funcs.py  jobs.py  langs.py  play.py  progress_handler.py  shell_command.py  start.py  stream.py  update.py  watcher.py
src/modules/utils/: __init__.py  _filters.py  _join_ub.py  admins.py  buttons.py  play_helpers.py  strings.py  thumbnails.py
