[project]
name = "tgmusicbot"
version = "1.1.9"
description = "Telegram Music Bot with full playback support using PyTdBot and PyTgCalls"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    { name = "Ashok Shau", email = "ashokshau@t.me" }
]
keywords = [
    "telegram", "music", "bot", "async", "tdlib",
    "pytgcalls", "voicechat", "spotify", "ytmusic", "opensource",
    "pytdbot", "py-tgcalls", "yt-dlp"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat :: Telegram",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Environment :: Console",
    "Framework :: AsyncIO"
]
dependencies = [
    "aiofiles~=24.1.0",
    "APScheduler~=3.11.0",
    "cachetools~=5.5.2",
    "kurigram~=2.2.3",
    "meval~=2.5",
    "motor~=3.7.0",
    "ntgcalls==2.0.0rc5",
    "pillow~=11.2.1",
    "psutil~=7.0.0",
    "py-yt-search~=0.3",
    "pycryptodome~=3.22.0",
    "pydantic~=2.11.4",
    "py-tgcalls==2.2.0rc3",
    "PyTgCrypto~=1.2.9.2",
    "python-dotenv~=1.1.0",
    "pytdbot~=0.9.3",
    "pytz~=2025.2",
    "tdjson~=1.8.49",
    "ujson~=5.10.0",
    "yt-dlp~=2025.4.30",
]

[project.optional-dependencies]
dev = ["setuptools~=78.1.1", "black", "ruff"]

[project.scripts]
tgmusic = "src.__main__:main"

[project.urls]
"Homepage" = "https://github.com/AshokShau/tgmusicbot"
"Source" = "https://github.com/AshokShau/tgmusicbot"
"Issue Tracker" = "https://github.com/AshokShau/tgmusicbot/issues"

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"]
