[project]
name = "tgmusicbot"
version = "1.2.3"
description = "Telegram Music Bot with full playback support using PyTdBot and PyTgCalls"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ashok Shau", email = "ashokshau@t.me" },
]
keywords = [
    "telegram",
    "music",
    "bot",
    "async",
    "tdlib",
    "pytgcalls",
    "voicechat",
    "spotify",
    "ytmusic",
    "opensource",
    "pytdbot",
    "py-tgcalls",
    "yt-dlp",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat :: Telegram",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Environment :: Console",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiofiles~=24.1.0",
    "cachetools~=6.2.0",
    "kurigram~=2.2.10",
    "meval~=2.5",
    "ntgcalls~=2.0.6",
    "pillow~=11.3.0",
    "psutil~=7.0.0",
    "py-yt-search~=0.3",
    "pycryptodome~=3.23.0",
    "pydantic~=2.11.7",
    "pymongo~=4.14.1",
    "py-tgcalls~=2.2.8",
    "pytgcrypto~=1.2.11",
    "pytdbot~=0.9.6",
    "tdjson~=1.8.52",
    "ujson~=5.11.0",
    "yt-dlp~=2025.9.5",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "setuptools~=80.9.0",
    "black",
    "ruff",
]

[project.scripts]
start = "TgMusic.__main__:main"

[project.urls]
Homepage = "https://github.com/AshokShau/tgmusicbot"
Source = "https://github.com/AshokShau/tgmusicbot"
"Issue Tracker" = "https://github.com/AshokShau/tgmusicbot/issues"

[tool.uv]
package = true

[tool.setuptools]
packages = [
    "TgMusic",
]
